# notes

./: .gitignore  404.html  Makefile  README.md  _config.yml  feed.xml  index.html  pyproject.toml  repos.code-workspace  robots.txt  sitemap.xml
_fastpages_docs/: _setup_pr_template.md
_includes/: custom-head.html
_notebooks/: 2020-07-29-saa-c02-chad-smith-pearson-live-lesson.ipynb  2020-08-21-saa-c02-summer-mocks.ipynb  2020-09-24-saa-c02-summer-mocks.ipynb  2021-08-18-fast-ai-notes.ipynb
_pages/: about.md
_posts/: 2020-02-20-test.md  2020-07-19-book-notes-managing-humans.md  2020-07-21-march-to-the-beat.md  2020-07-29-saa-c02-chad-smith-pearson-live-lesson.md  2020-07-31-playing-lego.md  2020-08-14-kicking-a-bad-habbit-by-understanding-instant-vs-delayed-gratification.md  2020-08-15-my-first-empathy.md  2020-08-21-saa-c02-summer-mocks.md  2020-09-06-aws-well-architected-framework.md  2020-09-24-saa-c02-summer-mocks.md  2020-10-24-westcott-enquiry.md  2020-11-11-react-hooks-notes.md  2021-04-07-another-post-on-digital-detoxing-the-lightphone.md  2021-05-11-book-notes-never-split-the-difference-chris-voss.md  2021-06-09-book-notes-the-book-you-wish-your-parents-had-read-and-your-children-will-be-glad-you-did-phillipa-perry.md  2021-06-25-morning-tv-time.md  2021-08-09-book-notes-how-to-make-the-world-add-up-tim-harford.md  2021-08-18-fast-ai-notes.md  2021-11-14-memories-letter-to-alice.md  2022-01-17-book-notes-how-to-raise-a-reader.md  2022-08-27-book-notes-10-days-to-a-less-defiant-child.md  2023-02-13-quotes-on-knowledge.md  2026-02-01-test-post-content-1.md  (+10 more)
(+46 files in other folders)
