[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Jon Whittlestone <dev@howapped.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
